<resources>
    <string name="app_name">A4_Start</string>
    <string name="gameTitle">Doge Clicker</string>
    <string name="dogetitle">Doge:</string>
    <string name="initialDogeValue">0</string>
    <string name="textHuman">Humans:</string>
    <string name="textFireHydrant">Fire Hydrants:</string>
    <string name="textTreats">Treats</string>
    <string name="textShoes">Shoes</string>
    <string name="buttonAddSymbol">+</string>
    <string name="textCost">Buy for </string>
    <string name="buttonBackground">#d86439a0</string>
    <string name="toast">
        Your %d shoes help find %.1f doges per press\n
        Your %d treats help find %.1f doges per press\n
        Your %d humans help find %.1f doges per press\n
        Your %d hydrants help find %.1f doges per press\n
    </string>
</resources>
