<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itp341.a4.MainActivity"
    android:background="#685252">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:background="#40000000"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/gameTitle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#40000000"
            android:gravity="center"
            android:text="@string/dogetitle"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textViewDogeCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="#40000000"
            android:gravity="center"
            android:text="@string/initialDogeValue"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <ImageButton
            android:id="@+id/imageButtonMocha"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/mocha" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingHorizontal="40dp"
            android:orientation="vertical">

            <!-- Human Button -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_heights"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/button_heights"
                        android:layout_height="match_parent"
                        android:src="@drawable/lady"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="8dp"
                            android:text="@string/textHuman"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/humanTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="8dp"
                            android:tag="0"
                            android:text="@string/initialDogeValue"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="#4CAF50"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textViewHumanCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/initialDogeValue"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                        android:textColor="#3CFFFFFF"
                        android:paddingRight="16dp"
                        android:textStyle="bold" />

                </LinearLayout>
                <Button
                    android:id="@+id/buttonBuyHuman"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_heights"
                    android:background="@drawable/textbox"/>
            </RelativeLayout>

            <!-- Treat button -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/button_spacing">

                <!-- Button background -->
                <Button
                    android:id="@+id/buttonBuyHydrant"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_heights"
                    android:gravity="fill_horizontal"
                    android:padding="30dp"
                    android:text="@string/buttonAddSymbol" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_heights"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/button_heights"
                        android:layout_height="match_parent"
                        android:src="@drawable/cookie"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textTreats"
                            android:layout_gravity="center_horizontal"
                            android:textColor="#04ff00" />

                        <TextView
                            android:id="@+id/textViewTreatsCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/textView3"
                            android:layout_marginStart="28dp"
                            android:text="@string/initialDogeValue"
                            android:layout_gravity="center_horizontal"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>


            <!-- Shoes button -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/button_spacing">

                <Button
                    android:id="@+id/buttonBuyTreat"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_heights"
                    android:background="#56bf51"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_heights"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="26dp"
                            android:text="@string/textShoes"
                            android:textColor="#00ffaa" />

                        <TextView
                            android:id="@+id/textViewShoesCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/initialDogeValue"
                            android:layout_gravity="center_horizontal"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonBuyShoe"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonAddSymbol" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginBottom="50dp"
                            android:text="@string/textFireHydrant"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#0000ff"
                            android:textSize="25dp" />

                        <TextView
                            android:id="@+id/textViewHydrantCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/initialDogeValue"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
